fixed img path in benefits and added z-index for container for order block

--- a/css/main.css
+++ b/css/main.css
@@ -67,6 +67,7 @@ button {
   display: flex;
   flex-direction: column;
   align-items: center;
+  z-index: 1;
 }
 
 .section {
@@ -282,7 +283,7 @@ button {
   position: relative;
 }
 .benefits__item:before {
-  content: url("/img/decor-circles.png");
+  content: url("../img/decor-circles.png");
   position: absolute;
   top: 52px;
   right: 0;
@@ -409,7 +410,7 @@ button {
 
 .reviews__content {
   flex: 1;
-  margin: 12px 100px 12px 20px;
+  padding: 12px 100px 12px 20px;
 }
 
 .reviews__title {
