--- a/scss/base.scss
+++ b/scss/base.scss
@@ -65,6 +65,7 @@ button {
   display: flex;
   flex-direction: column;
   align-items: center;
+  z-index: 1;
 }
 
 .section {
