--- a/scss/components/benefits.scss
+++ b/scss/components/benefits.scss
@@ -17,7 +17,7 @@
   position: relative;
 
   &:before {
-    content: url("/img/decor-circles.png");
+    content: url("../img/decor-circles.png");
     position: absolute;
     top: 52px;
     right: 0;
