--- a/scss/components/reviews.scss
+++ b/scss/components/reviews.scss
@@ -70,7 +70,7 @@
 
 .reviews__content {
   flex: 1;
-  margin: 12px 100px 12px 20px;
+  padding: 12px 100px 12px 20px;
 }
 
 .reviews__title {
